[package]
name = "bench-rs"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
description = "A benchmark library"
license = "MIT"
repository = "https://github.com/juzi5201314/bench-rs"
homepage = "https://github.com/juzi5201314/bench-rs"
documentation = "https://docs.rs/bench-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bunt = "0.2.1"
bencher-macro = { version = "0.1", path = "./bencher-macro" }

[dev-dependencies]
rcnb-rs = "0.1.0"
base64 = "0.12.3"
rand = "0.7.3"