[package]
name = "bencher-macro"
version = "0.1.0"
authors = ["soeur <juzi201314@gmail.com>"]
edition = "2018"
description = "A benchmark library"
license = "MIT"
repository = "https://github.com/juzi5201314/bench-rs"
homepage = "https://github.com/juzi5201314/bench-rs"
documentation = "https://docs.rs/bench-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.2"
syn = { version = "1.0.14", features = ["full"] }
darling = "0.10.2"
proc-macro2 = "1.0.8"

[lib]
proc-macro = true